--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Este es un sitio web con Github Pages</h1>
 
     <p>Divergente soluciones Informaticas</p>
-    <p><img src="https://ibb.co/4W7jXyP" width="100%"> </p>
+    <p><img src="https://i.ibb.co/H7Vrbvn/Divergente2.png" width="100%"> </p>
     
 </body>
 </html>
